@@ -57,6 +57,11 @@ idle = 30
 ; Timeout in seconds for connections before giving up
 socktimeout = 5.0
 
+; Time interval in seconds before refreshing proxy info. Valid int, default: 60
+;   Proxy info reloaded from a PAC file found via WPAD or AutoConfig URL, or
+;   manual proxy info defined in Internet Options
+proxyreload = 60
+
 ; Run in foreground when frozen or with pythonw.exe. 0 or 1, default: 0
 ;   Px will attach to the console and write to it even though the prompt is
 ;   available for further commands. CTRL-C in the console will exit Px
