@@ -19,6 +19,10 @@ TBD
   use Px. Disallow any external clients unless --gateway specified along with a
   restrictive --allow definition - PR20
 - Changed --socktimeout from int to float
+- Added support to discover proxy info from Internet Options - Automatic Config
+  URL with PAC files, WPAD, or static proxy definition
+- Added --proxyreload flag to configure interval between rediscovery of proxy
+  info
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
